[project]
authors = [{ name = "grindsa", email = "grindelsack@gmail.com" }]
name = "dkb_robo"
description = "Download transactions from the website of Deutsche Kreditbak AG"
keywords = ["Deutsche Kreditbank", "DKB"]
version = "0.27"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Natural Language :: German",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.7"
dependencies = [
    "bs4",
    "mechanicalsoup",
    "requests",
    "pillow",
    "tabulate",
    "click",
]
optional-dependencies.test = ["pytest", "pytest-cov", "html5lib"]
optional-dependencies.dev = ["build", "dkb_robo[test]"]
scripts = { dkb = "dkb_robo.cli:main" }

[project.urls]
Repository = "https://github.com/grindsa/dkb-robo"
Issues = "https://github.com/grindsa/dkb-robo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.only-packages = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--cov=dkb_robo",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
log_cli_level = "INFO"
minversion = "7"
xfail_strict = true
testpaths = ["test"]
