[project]
authors = [{ name = "grindsa", email = "grindelsack@gmail.com" }]
name = "dkb_robo"
description = "Download transactions from the website of Deutsche Kreditbak AG"
keywords = ["Deutsche Kreditbank", "DKB"]
version = "0.30.1"
readme = "README.md"
classifiers = [
    # Keep in sync with the Python version matrix in test_lint.yaml GitHub workflow.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Natural Language :: German",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.8"
dependencies = [
    "bs4",
    "mechanicalsoup",
    "requests",
    "pillow",
    "tabulate",
    "click",
]
optional-dependencies.test = ["pytest", "pytest-cov", "html5lib"]
optional-dependencies.dev = ["build", "dkb_robo[test]", "pre-commit"]
scripts = { dkb = "dkb_robo.cli:main" }

[project.urls]
Repository = "https://github.com/grindsa/dkb-robo"
Issues = "https://github.com/grindsa/dkb-robo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.only-packages = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--cov=dkb_robo",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
log_cli_level = "INFO"
minversion = "7"
xfail_strict = true
testpaths = ["test"]
